# serializer version: 1
# name: test_entities[todo.home_assistant_garden-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'todo',
    'entity_category': None,
    'entity_id': 'todo.home_assistant_garden',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Garden',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Garden',
    'platform': 'famn',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <TodoListEntityFeature: 4>,
    'translation_key': None,
    'unique_id': '1a2b3c4d-5e6f-4a7b-8c9d-0e1f2a3b4c5d_3f5b1c26-9a5b-4a41-9b3e-2c1a9b0f1002',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[todo.home_assistant_garden-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Home Assistant Garden',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <TodoListEntityFeature: 4>,
    }),
    'context': <ANY>,
    'entity_id': 'todo.home_assistant_garden',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_entities[todo.home_assistant_weekly_chores-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'todo',
    'entity_category': None,
    'entity_id': 'todo.home_assistant_weekly_chores',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Weekly chores',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Weekly chores',
    'platform': 'famn',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <TodoListEntityFeature: 4>,
    'translation_key': None,
    'unique_id': '1a2b3c4d-5e6f-4a7b-8c9d-0e1f2a3b4c5d_3f5b1c26-9a5b-4a41-9b3e-2c1a9b0f1001',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[todo.home_assistant_weekly_chores-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Home Assistant Weekly chores',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <TodoListEntityFeature: 4>,
    }),
    'context': <ANY>,
    'entity_id': 'todo.home_assistant_weekly_chores',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
